debug: correctif de l'absence de docker dans le containeur jenkins

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
 
 
   jenkins:
-    image: jenkins/jenkins:lts # Image officielle de Jenkins (version LTS)
+    image: custom-jenkins
     container_name: jenkins
     ports:
       - "8080:8080"
