debug: correctif de config du containeur jenkins

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
 
 
   jenkins:
+    build:
+        context: ./jenkins
     image: custom-jenkins
     container_name: jenkins
     ports:
