debug: correctif de la config  du containeur jenkins

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,6 +2,7 @@
 FROM node:18 AS builder
 WORKDIR /app
 
+# Installer Git pour cloner le dépôt
 RUN apt-get update && apt-get install -y git
 
 # Cloner directement le code source depuis GitHub
@@ -14,19 +15,26 @@ RUN npm install
 # Construire l'application pour la production
 RUN npm run build
 
-# Étape 2 : Image pour la production
+# Nettoyer pour réduire la taille de l'image
+RUN npm cache clean --force && rm -rf /var/lib/apt/lists/*
+
+# Étape 2 : Préparer l'image pour la production
 FROM node:18-alpine
 WORKDIR /app
 
-# Copier les fichiers nécessaires depuis le builder
+# Copier les fichiers nécessaires depuis l'étape builder
 COPY --from=builder /app/.output ./.output
 COPY --from=builder /app/package*.json ./
 
+# Ajouter un utilisateur non-root pour la sécurité
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+USER appuser
+
 # Installer uniquement les dépendances de production
-RUN npm install --omit=dev
+RUN npm install --omit=dev && npm cache clean --force
 
 # Exposer le port pour l'application
 EXPOSE 3000
 
-# Démarrer l'application
+# Commande de démarrage
 CMD ["node", "./.output/server/index.mjs"]
