--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock  # Monter uniquement le socket Docker si nécessaire
       - .env:/var/jenkins_home/.env  # Monter le fichier .env pour Jenkins
+      - .env:/var/jenkins_home/workspace/.env  # Monter le fichier .env pour Jenkins
     networks:
       - ci_network
 
