debug: correctif de la config  du containeur jenkins

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       # JENKINS_OPTS: --prefix=/jenkins
     volumes:
       - jenkins_home:/var/jenkins_home
-      - /var/run/docker.sock:/var/run/docker.sock  # Monter uniquement le socket Docker si nécessaire
+      - /var/run/docker.sock:/var/run/docker.sock:rw  # Monter uniquement le socket Docker si nécessaire
       - .env:/var/jenkins_home/.env  # Monter le fichier .env pour Jenkins
       - .env:/var/jenkins_home/workspace/.env  # Monter le fichier .env pour Jenkins
     networks:
