--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -4,7 +4,7 @@ FROM jenkins/jenkins:lts
 # Passer en mode root pour installer des outils
 USER root
 
-# Installer Docker
+# Installer Docker et les outils nécessaires
 RUN apt-get update && apt-get install -y \
     apt-transport-https \
     ca-certificates \
@@ -20,8 +20,12 @@ RUN curl -L "https://github.com/docker/compose/releases/download/2.5.1/docker-co
     -o /usr/local/bin/docker-compose && \
     chmod +x /usr/local/bin/docker-compose
 
-# Ajouter l'utilisateur Jenkins au groupe Docker
-RUN groupadd -f docker && usermod -aG docker jenkins
+# Créer le groupe docker s'il n'existe pas déjà et ajouter Jenkins au groupe
+RUN groupadd -g 998 docker || true && \
+    usermod -aG docker jenkins
+
+# Modifier les permissions du socket Docker
+RUN chmod 666 /var/run/docker.sock || true
 
 # Revenir à l'utilisateur Jenkins
 USER jenkins
