debug: correctif de la config  du containeur jenkins

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -21,13 +21,10 @@ RUN curl -L "https://github.com/docker/compose/releases/download/2.5.1/docker-co
     chmod +x /usr/local/bin/docker-compose
 
 # Créer le groupe docker s'il n'existe pas déjà et ajouter Jenkins au groupe
-RUN groupadd -g 998 docker || true && \
-    usermod -aG docker jenkins
+RUN groupadd -f docker && usermod -aG docker jenkins
 
 # Modifier les permissions du socket Docker
-RUN groupadd -f docker && usermod -aG docker jenkins
 RUN chmod 666 /var/run/docker.sock || true
 
-# Revenir à l'utilisateur Jenkins
-USER jenkins
-# USER root
+# Rester en tant qu'utilisateur root (commenter la ligne suivante si vous voulez revenir à l'utilisateur jenkins)
+USER root
